--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
    body {
-     background-image: url(/www/space.jpg);
+     background-image: url(space.jpg);
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
