--- a/design.css
+++ b/design.css
@@ -1,5 +1,5 @@
    body {
-     background-image: url(/github.io/space.jpg);
+     background-image: url(github.io/space.jpg);
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
