--- a/design.css
+++ b/design.css
@@ -1,5 +1,5 @@
    body {
-     background-image: url(github.io/space.jpg);
+     background-image: url(https://media.istockphoto.com/videos/retro-8-bit-arcade-game-space-in-loop-video-id962000126?s=640x640);
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
