--- a/about.css
+++ b/about.css
@@ -28,7 +28,7 @@
      margin-left: 40px;
      margin-bottom: 23px;
      font-size: 22px;
-     height: 30vh;
+     height: 80%;
      width: 80%;
      background-color: #e5e5f7c4;
 opacity: 1;
