--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@
 
    .content-right {
      margin-left: 100px;
-     width: 510px;
+     width: 50%;
    }
    .news-heading {
        border: solid 1px;
