--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
    }
 
    .content-left {
-     width: 450px;
+     width: 50%;
      height: 520px;
      border: solid 2px;
      background-color: rgb(245, 245, 245);
