--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
    body {
      background-image: url(https://media.istockphoto.com/videos/retro-8-bit-arcade-game-space-in-loop-video-id962000126?s=640x640);
      background-repeat:repeat;
-     background-size: 100%;
+     background-size: 600px;
      background-attachment:fixed;
        background-color: rgb(245, 245, 245);
        color: #0C0C0D;
      display: flex;
      font-family: "HiraginoSans-W3"
+
    }
 
  * {}
@@ -109,8 +110,11 @@
    .content-right {
      margin-left: 100px;
      width: 50%;
-     white-space: nowrap;
    }
+
+   td {
+   white-space: nowrap;
+}
 
    .news-heading {
        border: solid 1px;
@@ -145,3 +149,4 @@
    }
 
 a{color: blue;}
+
