--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
      border: solid 3px;
      box-sizing: border-box;
      height: 100vh;
-     width: 18%;
+     width: 20%;
      background-color: #e5e5f7;
     opacity: 0.8;
     background-image:  linear-gradient(#444cf7 1px, transparent 1px), linear-gradient(to right, #444cf7 1px, #e5e5f7 1px);
@@ -78,6 +78,7 @@
      width: 50%;
      height: 580px;
      border: solid 2px;
+     margin-left: 10px;
      background-color: rgb(245, 245, 245);
    }
 
