--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
    body {
-     background-image: url(https://media.istockphoto.com/videos/retro-8-bit-arcade-game-space-in-loop-video-id962000126?s=640x640);
+     background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F2.bp.blogspot.com%2F-S35fdHRbAd0%2FWQvu0er5TfI%2FAAAAAAABECI%2Ft9I_aSAdtCgQVcAXhWUgNFJx_8J0eFKSQCLcB%2Fs800%2Fbg_uchu_space.jpg&f=1&nofb=1;
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
