--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
    body {
-     background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2F2.bp.blogspot.com%2F-S35fdHRbAd0%2FWQvu0er5TfI%2FAAAAAAABECI%2Ft9I_aSAdtCgQVcAXhWUgNFJx_8J0eFKSQCLcB%2Fs800%2Fbg_uchu_space.jpg&f=1&nofb=1;
+     background-image: url(https://2.bp.blogspot.com/-S35fdHRbAd0/WQvu0er5TfI/AAAAAAABECI/t9I_aSAdtCgQVcAXhWUgNFJx_8J0eFKSQCLcB/s800/bg_uchu_space.jpg)
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
