--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
    body {
-     background-image: url(https://2.bp.blogspot.com/-S35fdHRbAd0/WQvu0er5TfI/AAAAAAABECI/t9I_aSAdtCgQVcAXhWUgNFJx_8J0eFKSQCLcB/s800/bg_uchu_space.jpg)
+     background-image: url(https://bodoge-bu.github.io/github.io/space.PNG)
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
