--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 /* This is a CSS file */
    body {
-     background-image: url(https://media.istockphoto.com/videos/retro-8-bit-arcade-game-space-in-loop-video-id962000126?s=640x640);
+     background-image: url(https://bodoge-bu.github.io/github.io/space.PNG);
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
