--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,6 @@
 
    body {
-     background-image: url(bodoge-bu/github.io/space.PNG)
+     background-image: url(https://bodoge-bu.github.io/github.io/space.png)
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
