--- a/design.css
+++ b/design.css
@@ -78,7 +78,7 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 50%;
+  width: 70%;
   height: 55vw;
   overflow-y: scroll;
 }
@@ -93,7 +93,7 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 50%;
+  width: 70%;
   height: 55vw;
   overflow-y: scroll;
 }
@@ -224,6 +224,7 @@
 .popup-content{
   margin: 40px auto 40px auto;
   width:100%;
+  align: center;
 }
 
 .popup-content1{
