--- a/about.css
+++ b/about.css
@@ -1,6 +1,6 @@
 /* This is a CSS file */
    body {
-     background-image: url(https://bodoge-bu.github.io/github.io/space.PNG);
+     background-image: url(https://media.istockphoto.com/videos/retro-8-bit-arcade-game-space-in-loop-video-id962000126?s=640x640);
      background-repeat:repeat;
      background-size: 600px;
      background-attachment:fixed;
@@ -25,7 +25,7 @@
      border: solid 3px;
      box-sizing: border-box;
      margin-top: 40px;
-     margin-left: 40px;
+     margin-left: 10%;
      margin-bottom: 23px;
      font-size: 22px;
      height: 80%;
@@ -37,10 +37,18 @@ background-size: 50px 50px;
      color: blue;
    }
 
+ .content-left2 {
+     width: 80%;
+     height: 100%;
+     margin-left: 10%;
+     margin-right: 3%;
+     margin-bottom: 2%;
+     color: white;
+   }
+
    .profile-english {
      width: 350px;
      font-family: 'arial black'
      margin-bottom: 5px;
-     text-align: center;
      margin-left: 400px;
    }
