--- a/archive.css
+++ b/archive.css
@@ -61,7 +61,7 @@
   bottom: 0;
   margin: auto;
   width: 80%;
-  height: 55vw;
+  height: 70%;
   overflow-y: scroll;
 }
 
@@ -75,8 +75,8 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 70%;
-  height: 55vw;
+  width: 80%;
+  height: 70%;
   overflow-y: scroll;
 }
 
@@ -90,8 +90,8 @@
   right: 0;
   bottom: 0;
   margin: auto;
-  width: 70%;
-  height: 55vw;
+  width: 80%;
+  height: 70%;
   overflow-y: scroll;
 }
 
