--- a/archive.css
+++ b/archive.css
@@ -113,6 +113,22 @@
   overflow-y: scroll;
 }
 
+.popup4 {
+  background-color: #efefef;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, .8);
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 80%;
+  height: 55vw;
+  overflow-y: scroll;
+  
+}
+
 /* チェックボックスの初期設定 */
 #popup-on{
   display: none;
@@ -130,6 +146,11 @@
   display: none;
 }
 
+#popup-on4{
+  display: none;
+}
+
+
 /* チェックされたらポップアップウインドウを開く */
 #popup-on:checked + .popup{
   display: block;
@@ -144,6 +165,10 @@
 }
 
 #popup-on3:checked + .popup3{
+  display: block;
+}
+
+#popup-on4:checked + .popup4{
   display: block;
 }
 
@@ -176,6 +201,15 @@
 }
 
 .icon-close3{
+  background: #000;
+  color: #fff;
+  font-size: 30px;
+  padding: 0 10px;
+  position: absolute;
+  right: 0;
+}
+
+.icon-close4{
   background: #000;
   color: #fff;
   font-size: 30px;
@@ -229,6 +263,17 @@
   text-align: center;
 }
 
+.btn-close4{
+  background: #000;
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px auto;
+  width: 95%;
+  text-align: center;
+}
+
 /* 開くボタン */
 .btn-open{
   background: rgba(255, 255, 255, 0);
@@ -241,7 +286,6 @@
   text-align: center;
 
     font-size: 100px
-  
 }
 
 .btn-open1{
@@ -286,6 +330,19 @@
   
 }
 
+.btn-open4{
+  background: rgba(255, 255, 255, 0);
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px auto;
+  width: 95%;
+  text-align: center;
+
+    font-size: 100px
+}
+
 /* ポップアップの内容 */
 .popup-content{
   margin: 40px auto 40px auto;
@@ -308,6 +365,13 @@
   width:100%;
   text-align: center;
 }
+
+.popup-content4{
+  margin: 40px auto 40px auto;
+  width:100%;
+  text-align: center;
+}
+
 
 .center{
 	text-align: center;
