--- a/archive.css
+++ b/archive.css
@@ -25,6 +25,16 @@
      font-weight:700; 
    }
 
+   .heading2 {
+      border-top: solid 5px rgb(0, 0, 0);
+     border-bottom: solid 5px rgb(0, 0, 0);
+     margin-top: 35px;
+     margin-bottom: 5px;
+     text-align: center;
+     background-color: rgb(245, 245, 245);
+     font-size: 32px;
+     font-weight:700; 
+   }
 
 #href {color: rgba(255, 255, 255, 0);}
 
