--- a/archive.css
+++ b/archive.css
@@ -73,7 +73,7 @@
   bottom: 0;
   margin: auto;
   width: 80%;
-  height: 55vw;
+  height: 70%;
   overflow-y: scroll;
   
 }
@@ -134,7 +134,7 @@
   bottom: 0;
   margin: auto;
   width: 80%;
-  height: 55vw;
+  height: 70%;
   overflow-y: scroll;
   
 }
