--- a/aboutus.css
+++ b/aboutus.css
@@ -7,6 +7,9 @@
        color: #0C0C0D;
      display: block;
      font-family: "HiraginoSans-W3"
+ 　　　　　　 -webkit-user-select:none; // テキスト長押しの選択ボックスを無効化
+}
+
    }
 
 
