--- a/aboutus.css
+++ b/aboutus.css
@@ -6,8 +6,8 @@
        background-color: rgb(245, 245, 245);
        color: #0C0C0D;
      display: block;
-     font-family: "HiraginoSans-W3" ;
  　　　　　　 -webkit-user-select:none; 
+     font-family: "HiraginoSans-W3" 
 }
 
 
