--- a/aboutus.css
+++ b/aboutus.css
@@ -6,7 +6,8 @@
        background-color: rgb(245, 245, 245);
        color: #0C0C0D;
      display: block;
- 　　　　　　 -webkit-user-select:none; 
+     user-select: none;
+     -webkit-user-select: none;
      font-family: "HiraginoSans-W3" 
 }
 
