--- a/archive.css
+++ b/archive.css
@@ -139,6 +139,22 @@
   
 }
 
+.popup5 {
+  background-color: #efefef;
+  box-shadow: 0 0 0 9999px rgba(0, 0, 0, .8);
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 80%;
+  height: 70%;
+  overflow-y: scroll;
+  
+}
+
 /* チェックボックスの初期設定 */
 #popup-on{
   display: none;
@@ -160,6 +176,9 @@
   display: none;
 }
 
+#popup-on5{
+  display: none;
+}
 
 /* チェックされたらポップアップウインドウを開く */
 #popup-on:checked + .popup{
@@ -179,6 +198,10 @@
 }
 
 #popup-on4:checked + .popup4{
+  display: block;
+}
+
+#popup-on5:checked + .popup5{
   display: block;
 }
 
@@ -220,6 +243,15 @@
 }
 
 .icon-close4{
+  background: #000;
+  color: #fff;
+  font-size: 30px;
+  padding: 0 10px;
+  position: absolute;
+  right: 0;
+}
+
+.icon-close5{
   background: #000;
   color: #fff;
   font-size: 30px;
@@ -274,6 +306,17 @@
 }
 
 .btn-close4{
+  background: #000;
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px auto;
+  width: 95%;
+  text-align: center;
+}
+
+.btn-close5{
   background: #000;
   border-radius: 10px;
   color: #fff;
@@ -353,6 +396,19 @@
     font-size: 100px
 }
 
+.btn-open5{
+  background: rgba(255, 255, 255, 0);
+  border-radius: 10px;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  margin: 10px auto;
+  width: 95%;
+  text-align: center;
+
+    font-size: 100px
+}
+
 /* ポップアップの内容 */
 .popup-content{
   margin: 40px auto 40px auto;
@@ -377,6 +433,12 @@
 }
 
 .popup-content4{
+  margin: 40px auto 40px auto;
+  width:100%;
+  text-align: center;
+}
+
+.popup-content5{
   margin: 40px auto 40px auto;
   width:100%;
   text-align: center;
