--- a/aboutus.css
+++ b/aboutus.css
@@ -101,6 +101,37 @@
      margin-bottom: 2%;
      background-color: rgba(255, 255, 255, 0.801);
    }
+   .content-left6 {
+     width: 90%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 3%;
+     margin-right: 3%;
+     margin-bottom: 2%;
+     background-color: rgba(255, 255, 255, 0.801);
+   }
+
+
+   .content-left7 {
+     width: 90%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 3%;
+     margin-right: 3%;
+     margin-bottom: 2%;
+     background-color: rgba(255, 255, 255, 0.801);
+   }
+
+   .content-left8 {
+     width: 90%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 3%;
+     margin-right: 3%;
+     margin-bottom: 2%;
+     background-color: rgba(255, 255, 255, 0.801);
+   }
+
 
    .profile {
      margin-bottom: 40px;
@@ -142,6 +173,32 @@
      padding: 0px 20px;              /* [上下]、[左右]の順に余白を指定 */
      align-items: center;
    }
+
+
+   .profile6 {
+     margin-bottom: 40px;
+     margin-left: 2%;
+     margin-right: 2%;
+     padding: 0px 20px;              /* [上下]、[左右]の順に余白を指定 */
+     align-items: center;
+   }
+
+   .profile7 {
+     margin-bottom: 40px;
+     margin-left: 2%;
+     margin-right: 2%;
+     padding: 0px 20px;              /* [上下]、[左右]の順に余白を指定 */
+     align-items: center;
+   }
+
+   .profile8 {
+     margin-bottom: 40px;
+     margin-left: 2%;
+     margin-right: 2%;
+     padding: 0px 20px;              /* [上下]、[左右]の順に余白を指定 */
+     align-items: center;
+   }
+
 
 .contents-wrapper-inner {
      display: inline-block;
