--- a/archive.css
+++ b/archive.css
@@ -12,8 +12,7 @@
    }
 
 .face-photo {
-     display: inline-block;
-     align-items: start;
+     display: block;
 	hight: auto;
 	width: 33%;
    }
