--- a/archive.css
+++ b/archive.css
@@ -17,6 +17,7 @@
 
    .face-photo {
      width: 100%;
+     max-width: 500px;
      align-items: center;
      margin-top: 30px;
      margin-left: 5px;
