--- a/archive.css
+++ b/archive.css
@@ -24,6 +24,10 @@
      margin-bottom: 30px;
    }
 
+.face-photo2 {
+  text-align: center;
+}
+
 
    .heading {
       border-top: solid 5px rgb(0, 0, 0);
