--- a/aboutus.css
+++ b/aboutus.css
@@ -54,6 +54,16 @@
   text-align: center;
 }
 
+   .content {
+     width: 90%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 3%;
+     margin-right: 3%;
+     margin-bottom: 2%;
+     background-color: rgba(255, 255, 255, 0);
+   }
+
 #href {color: white;}
 
    .content-left {
