--- a/aboutus.css
+++ b/aboutus.css
@@ -65,6 +65,16 @@
      background-color: rgba(255, 255, 255, 0);
    }
 
+   .designer-comment {
+     width: 90%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 5%;
+     margin-right: 5%;
+     margin-bottom: 2%;
+     background-color: rgba(255, 255, 255, 0.801);
+   }
+
 #href {color: white;}
 
    .content-left {
