--- a/aboutus.css
+++ b/aboutus.css
@@ -56,6 +56,11 @@
   text-align: center;
 }
 
+.min {
+  max-width: 800px;
+  text-align: center;
+}
+
    .content {
      width: 90%;
      height: 100%;
@@ -66,15 +71,7 @@
      background-color: rgba(255, 255, 255, 0);
    }
 
-   .designer-comment {
-     width: 90%;
-     height: 100%;
-     border: solid 2px;
-     margin-left: 5%;
-     margin-right: 5%;
-     margin-bottom: 2%;
-     background-color: rgba(255, 255, 255, 0.801);
-   }
+
 
 #href {color: white;}
 
@@ -144,6 +141,16 @@
      border: solid 2px;
      margin-left: 3%;
      margin-right: 3%;
+     margin-bottom: 2%;
+     background-color: rgba(255, 255, 255, 0.801);
+   }
+
+   .designer-comment {
+     width: 90%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 5%;
+     margin-right: 5%;
      margin-bottom: 2%;
      background-color: rgba(255, 255, 255, 0.801);
    }
