--- a/aboutus.css
+++ b/aboutus.css
@@ -220,6 +220,15 @@
      align-items: center;
    }
 
+   .designer-comment-s {
+     margin-top: 40px;
+     margin-bottom: 40px;
+     margin-left: 2%;
+     margin-right: 2%;
+     padding: 0px 20px;              /* [上下]、[左右]の順に余白を指定 */
+     align-items: center;
+   }
+
    .profile8 {
      margin-bottom: 40px;
      margin-left: 2%;
