--- a/aboutus.css
+++ b/aboutus.css
@@ -23,6 +23,7 @@
      background-color: rgb(245, 245, 245);
      font-size: 32px;
      font-weight:700; 
+      position: relative;
    }
 
    .content-right {
