--- a/aboutus.css
+++ b/aboutus.css
@@ -230,6 +230,7 @@
      margin-right: 2%;
      padding: 0px 20px;              /* [上下]、[左右]の順に余白を指定 */
      align-items: center;
+      background-color: rgba(255, 255, 255, 0.601);
    }
 
    .profile8 {
