--- a/aboutus.css
+++ b/aboutus.css
@@ -51,12 +51,13 @@
      margin-bottom: 23px;
    }
 
-
 .face-photo2 {
-  max-width: 100%;
-  text-align: center;
+   max-width: 800px; /* 最大幅 */
+   min-width: 240px; /* 最小幅 */
+   text-align: center;
 }
 
+.face-photo2 img { width: 100%; }
 
    .content {
      width: 90%;
