--- a/aboutus.css
+++ b/aboutus.css
@@ -30,6 +30,7 @@
      margin-left: 100px;
      width: 50%;
    }
+
    .news-heading {
        border: solid 1px;
        box-sizing: border-box;
@@ -52,12 +53,13 @@
    }
 
 .face-photo2 {
+   margin-left: 3%;
    max-width: 800px; /* 最大幅 */
    min-width: 240px; /* 最小幅 */
    text-align: center;
 }
 
-.face-photo2 img { width: 100%; }
+.face-photo2 img { width: 100%; text-align: center;}
 
    .content {
      width: 90%;
