--- a/aboutus.css
+++ b/aboutus.css
@@ -26,6 +26,18 @@
       position: relative;
    }
 
+   .marketheading {
+      border-top: solid 5px rgb(0, 0, 0);
+     border-bottom: solid 5px rgb(0, 0, 0);
+     margin-top: 35px;
+     margin-bottom: 5px;
+     text-align: center;
+     background-color: rgb(245, 245, 245);
+     font-size: 32px;
+     font-weight:700; 
+   　　　position: absolute;
+   }
+
    .content-right {
      margin-left: 100px;
      width: 50%;
@@ -50,7 +62,7 @@
      margin-top: 2%;
      margin-left: 3%;
      margin-bottom: 23px;
-   　　　position: absolute;
+    position: relative;
    }
 
 .face-photo2 {
