--- a/aboutus.css
+++ b/aboutus.css
@@ -50,10 +50,17 @@
      margin-top: 2%;
      margin-left: 3%;
      margin-bottom: 23px;
-    position: absolute;
-     vertical-align: middle;
    }
 
+.deme-photo {
+     display: inline-block;
+     align-items: start;
+     margin-top: 2%;
+     margin-left: 3%;
+     margin-bottom: 23px;
+       position: absolute;
+     vertical-align: middle;
+   }
 
 
 
