--- a/aboutus.css
+++ b/aboutus.css
@@ -25,6 +25,17 @@
      font-weight:700; 
    }
 
+   .heading2 {
+      border-top: solid 5px rgb(0, 0, 0);
+     border-bottom: solid 5px rgb(0, 0, 0);
+     margin-top: 35px;
+     margin-bottom: 5px;
+     text-align: center;
+     background-color: rgb(245, 245, 245);
+     font-size: 32px;
+     font-weight:700; 
+   }
+
 
    .content-right {
      margin-left: 100px;
@@ -50,6 +61,10 @@
      margin-top: 2%;
      margin-left: 3%;
      margin-bottom: 23px;
+   }
+
+.face-photo2 {
+     width: 100%;
    }
 
 .deme-photo {
