--- a/aboutus.css
+++ b/aboutus.css
@@ -74,7 +74,7 @@
      margin-left: 3%;
      margin-bottom: 23px;
        position: absolute;
-     vertical-align: middle;
+     vertical-align: top;
    }
 
 
