--- a/aboutus.css
+++ b/aboutus.css
@@ -67,6 +67,11 @@
 
 
 .deme-photo {
+        display: inline-block;
+     align-items: start;
+     margin-top: 2%;
+     margin-left: 3%;
+     margin-bottom: 23px;
        position: absolute;
    }
 
