--- a/aboutus.css
+++ b/aboutus.css
@@ -164,6 +164,10 @@
      background-color: rgba(255, 255, 255, 0.801);
    }
 
+.face-photo2 {
+     width: 100%;
+   }
+
    .content {
      width: 90%;
      height: 100%;
