--- a/archive.css
+++ b/archive.css
@@ -74,9 +74,13 @@
     
   }
 
-.face-photo2 {
-   max-width: 450px;
-}
+   .face-photo {
+     max-width: 450px;
+     align-items: center;
+     margin-top: 30px;
+     margin-left: 5px;
+     margin-bottom: 30px;
+   }
 
 
 /* ポップアップウインドウの設定 */
