--- a/aboutus.css
+++ b/aboutus.css
@@ -70,6 +70,12 @@
      max-width: 800px;
    }
 
+.senzaiphoto {
+     display: inline-block;
+     width: 30%;
+     max-width: 500px;
+   }
+
 .sizesentaku {
      display: inline-block;
      width: 100%;
