--- a/aboutus.css
+++ b/aboutus.css
@@ -72,8 +72,9 @@
 
 .senzaiphoto {
        float:  left;               /* 横並びにする */
-    margin:  0px;               /* 要素と要素の間を開ける */
+    margin:  1px;               /* 要素と要素の間を開ける */
     padding:  2px;             /* 余白指定 */
+    width: 350px;
      max-width: 400px;
    }
 
