--- a/aboutus.css
+++ b/aboutus.css
@@ -71,16 +71,16 @@
    }
 
 .senzaiphoto {
-       float:  left;               /* 横並びにする */
+    float:  left;               /* 横並びにする */
     margin:  1px;               /* 要素と要素の間を開ける */
     padding:  2px;             /* 余白指定 */
     width: 350px;
-     max-width: 400px;
+    max-width: 400px;
    }
 
-. clearbox {
-   clear:  both;
-}               /* 回り込みを解除する */
+.clearbox {
+   clear:  both;       /* 回り込みを解除する */
+}               
 
 
 .sizesentaku {
