--- a/aboutus.css
+++ b/aboutus.css
@@ -72,13 +72,13 @@
 
 .goodstitle {
    width: 100%;
-   font-size: 5000%;
+   font-size: 500%;
    font-weight: bold;
 }
 
 .goodssubtitle {
    width: 100%;
-   font-size: 3500%;
+   font-size: 20px;
 }
 
 
