--- a/aboutus.css
+++ b/aboutus.css
@@ -72,17 +72,18 @@
 
 .goodstitle {
    margin-top: 5px;
-   margin-bottom: -5px;
+   margin-bottom: -10px;
    width: 100%;
-   font-size: 200%;
+   font-size: 20vw;
    font-weight: bold;
+   letter-spacing: 0.2em
 }
 
 .goodssubtitle {
    margin-top: -5px;
    margin-bottom: 5px;
    width: 100%;
-   font-size: 200%;
+   font-size: 15vw%;
 }
 
 
