--- a/aboutus.css
+++ b/aboutus.css
@@ -74,16 +74,16 @@
    margin-top: 5px;
    margin-bottom: -10px;
    width: 100%;
-   font-size: 5vw;
+   font-size: 30px;
    font-weight: bold;
    letter-spacing: 0.1em
 }
 
 .goodssubtitle {
-   margin-top: -5px;
+   margin-top: -10px;
    margin-bottom: 5px;
    width: 100%;
-   font-size: 2vw;
+   font-size: 12px;
 }
 
 
