--- a/aboutus.css
+++ b/aboutus.css
@@ -74,7 +74,7 @@
    margin-top: 15px;
    margin-bottom: -10px;
    width: 90%;
-   font-size: 30px;
+   font-size: 32px;
    font-weight: bold;
    letter-spacing: 0.1em
 }
@@ -83,7 +83,8 @@
    margin-top: -10px;
    margin-bottom: 5px;
    width: 90%;
-   font-size: 20px;
+   font-size: 18px;
+   font-family: "HiraginoSans-W6" 
 }
 
 
