--- a/aboutus.css
+++ b/aboutus.css
@@ -184,6 +184,17 @@
      background-color: rgba(255, 255, 255, 0.801);
    }
 
+   .designer-comment2 {
+     float: left;
+     width: 40%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 5%;
+     margin-right: 7%;
+     margin-bottom: 5%;
+     background-color: rgba(255, 255, 255, 0.801);
+   }
+
 .face-photo2 {
      width: 100%;
    }
