--- a/aboutus.css
+++ b/aboutus.css
@@ -186,6 +186,7 @@
 
    .designer-comment2 {
      float: left;
+     min-width: 400px;
      width: 40%;
      height: 100%;
      border: solid 2px;
