--- a/aboutus.css
+++ b/aboutus.css
@@ -191,7 +191,7 @@
      float: left;
      min-width: 630px;
      width: 40%;
-     height: 100%;
+     height: auto;
      margin-left: 2%;
      margin-right: 2%;
      margin-bottom: 2%;
