--- a/aboutus.css
+++ b/aboutus.css
@@ -187,6 +187,16 @@
      background-color: rgba(255, 255, 255, 0.801);
    }
 
+   .designer-comment_b {
+     width: 90%;
+     height: 100%;
+     border: solid 2px;
+     margin-left: 5%;
+     margin-right: 7%;
+     margin-bottom: 5%;
+     background-color: rgba(255, 255, 255, 0);
+   }
+
    .designer-comment2 {
      float: left;
      min-width: 630px;
