--- a/aboutus.css
+++ b/aboutus.css
@@ -192,7 +192,7 @@
      height: 100%;
      margin-left: 5%;
      margin-right: 7%;
-     margin-bottom: 5%;
+     margin-bottom: 10%%;
      background-color: rgba(255, 255, 255, 0);
    }
 
@@ -203,7 +203,7 @@
      height: auto;
      margin-left: 2%;
      margin-right: 2%;
-     margin-bottom: 2%;
+     margin-bottom: 5%;
      background-color: rgba(255, 255, 255, 0.801);
    }
 
