--- a/aboutus.css
+++ b/aboutus.css
@@ -199,7 +199,7 @@
      height: 100%;
      margin-left: 5%;
      margin-right: 7%;
-     margin-bottom: 10%%;
+     margin-bottom: 10px;
      background-color: rgba(255, 255, 255, 0);
    }
 
