--- a/aboutus.css
+++ b/aboutus.css
@@ -101,10 +101,10 @@
    }
 
 .souryou {
-   margin-top: 5px;
-   margin-left: 5px;
-   margin-right: 5px;
-   margin-bottom: 5px;
+   margin-top: 5%;
+   margin-left: 5%;
+   margin-right: 5%;
+   margin-bottom: 5%;
    float: left;
    font-size: 17px;
    font-family: "HiraginoSans-W6" 
