--- a/aboutus.css
+++ b/aboutus.css
@@ -107,11 +107,18 @@
    margin-bottom: 5%;
    float: left;
    font-size: 20px;
+   position: relative;
+  left: -50%; 
+  float: left;
+  width:100px;
+  text-align:center;
+  list-style: none; 
    font-family: "HiraginoSans-W6" 
    
 }
 
    .shippinglist {
+     float: left;
      width: 90%;
      height: 100%;
      text-align: center;
