--- a/aboutus.css
+++ b/aboutus.css
@@ -102,15 +102,13 @@
 
 .souryou {
    margin-top: 5%;
-   margin-left: 5%;
-   margin-right: 5%;
+   margin-left: auto;
+   margin-right: auto;
    margin-bottom: 5%;
    float: left;
    font-size: 20px;
-   position: relative;
-  width:200px;
+  width:150px;
   text-align:center;
-  list-style: none; 
    font-family: "HiraginoSans-W6" 
    
 }
