--- a/aboutus.css
+++ b/aboutus.css
@@ -100,14 +100,26 @@
        position: absolute;
    }
 
-.souryou {
+.souryou0 {
    margin-top: 5%;
-   margin-left: auto;
-   margin-right: auto;
+   margin-left: 20%;
+   margin-right: 5%;
    margin-bottom: 5%;
    float: left;
    font-size: 20px;
-  width:150px;
+  text-align:center;
+   font-family: "HiraginoSans-W6" 
+   
+}
+
+
+.souryou {
+   margin-top: 5%;
+   margin-left: 5%;
+   margin-right: 5%;
+   margin-bottom: 5%;
+   float: left;
+   font-size: 20px;
   text-align:center;
    font-family: "HiraginoSans-W6" 
    
