--- a/aboutus.css
+++ b/aboutus.css
@@ -100,25 +100,13 @@
        position: absolute;
    }
 
-.souryou0 {
-   margin-top: 5%;
-   margin-left: 20%;
-   margin-right: 5%;
-   margin-bottom: 5%;
-   float: left;
-   font-size: 20px;
-  text-align:center;
-   font-family: "HiraginoSans-W6" 
-   
-}
-
 
 .souryou {
+   display: inline-block;
    margin-top: 5%;
    margin-left: 5%;
    margin-right: 5%;
    margin-bottom: 5%;
-   float: left;
    font-size: 20px;
   text-align:center;
    font-family: "HiraginoSans-W6" 
@@ -137,6 +125,11 @@
      margin-bottom: 5%;
      background-color: rgba(255, 255, 255, 0.801);
    }
+
+.span { 
+   width: 500px;
+   display: inline-block;
+}
 
 
 #href {color: white;}
