--- a/aboutus.css
+++ b/aboutus.css
@@ -100,6 +100,13 @@
        position: absolute;
    }
 
+.souryou0 {
+   width: 90%;
+   font-size: 20px;
+  text-align:center;
+   font-family: "HiraginoSans-W6" 
+   
+}
 
 .souryou {
    display: inline-block;
