--- a/aboutus.css
+++ b/aboutus.css
@@ -103,6 +103,8 @@
 .souryou0 {
    width: 90%;
    font-size: 20px;
+   margin-left: 5%;
+   margin-right: 7%;
   text-align:center;
    font-family: "HiraginoSans-W6" 
    
