--- a/aboutus.css
+++ b/aboutus.css
@@ -246,6 +246,7 @@
      margin-right: 3%;
      margin-bottom: 2%;
      background-color: rgba(255, 255, 255, 0);
+     font-family: "HiraginoSans-W6" 
    }
 
 
