--- a/style1.css
+++ b/style1.css
@@ -100,7 +100,7 @@
      align-items: center;
    }
    .profile-english {
-     width: 350px;
+     width: 100%;
      font-family: 'arial black'
      margin-bottom: 5px;
      margin-left: 0px;
