--- a/aboutus.css
+++ b/aboutus.css
@@ -57,6 +57,7 @@
 
 .face-photo {
      display: inline-block;
+     float:left;
      align-items: start;
      margin-top: 2%;
      margin-left: 3%;
